docroot/themes/custom/shops/style/scss/_base.scss
body {
  background-color: #FAFAFA;

  font-size: .875rem;
}

.dropdown {
  &-menu {
    @extend .border-0;
    @extend .shadow-sm;
    @extend .pt-0;
    @extend .pb-0;
  }
  &-item {
    @extend .pt-2;
    @extend .pb-2;
  }
}

.ssm-overlay,
.overlay {
  position: fixed;
  z-index: 10;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  display: none;

  background: rgba($black,.54);

  @include media-breakpoint-down(lg) {
    z-index: 105;
  }
}

#block-shops-local-tasks {
  @extend .pb-2;
  @extend .pt-2;

  ul {
    @extend .nav-tabs;
    @extend .nav;
  }

  li {
    @extend .nav-item;

    a {
      @extend .nav-link;
    }
  }

  .is-active {
    @extend .active;
  }
}

